<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".TelaEnviarLinks">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#747AC4"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imvLogo"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="#747AC4"
                app:srcCompat="@drawable/lg_completo" />

            <TextView
                android:id="@+id/tvLogout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="195dp"
                android:layout_weight="1"
                android:background="#747AC4"
                android:text="@string/logout"
                android:textColor="#000000"
                android:textSize="20dp" />


        </LinearLayout>

        <ScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/ivChat"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini1_chat" />

                <ImageButton
                    android:id="@+id/ivNotas"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini2_notas" />

                <ImageButton
                    android:id="@+id/ivControle"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini3_controle" />

                <ImageButton
                    android:id="@+id/ivHome"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini4_casa" />

                <ImageButton
                    android:id="@+id/ivInforme"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini5_informa" />

                <ImageButton
                    android:id="@+id/ivLinks"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini6_link" />

                <ImageButton
                    android:id="@+id/ivAdm"
                    android:layout_width="340px"
                    android:layout_height="180px"
                    android:layout_weight="1"
                    android:background="#747AC4"
                    app:srcCompat="@drawable/btn_mini7_adm" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="395dp"
        android:layout_height="715dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        android:gravity="center"
        tools:layout_editor_absoluteY="8dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/tt_links" />

        <TextView
            android:id="@+id/tvInfor"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/informe"
            android:textSize="20dp"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/edt_link"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/link"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btVoltar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#ffffff"
                android:textColor="#000000"
                android:layout_marginRight="30dp"
                android:text="@string/Voltar" />

            <Button
                android:id="@+id/btEnviar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#2E3C59"
                android:hint="@string/enviar" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>